@@ -180,6 +180,7 @@
 * Vpos: Check for response under refund.response_code [almalee24] #5501
 * Ebanx: Fix field nesting cof_info, device_id, and notification_url [yunnydang] #5494
 * MultiPay: Add Base Gateway adapter [Heavblade] #5497
+* CheckoutV2: Pass udf5 field in metadata [mjdonga] #5507
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
